Fix layout bug

--- a/app/assets/styles/_post.scss
+++ b/app/assets/styles/_post.scss
@@ -18,7 +18,7 @@
   position: relative;
   display: table;
   margin: 0 auto;
-  padding: 6rem 2rem 10rem;
+  padding: 6rem 0 10rem;
   max-width: 1000px;
   width: 100%;
   @include media-query($laptop) {
